--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Let Me 3D Print That For You - STLFlix quote site",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "nodemailer": "^6.9.13"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
